# polymarket-arb

./: Cargo.toml  README.md
src/: config.rs  main.rs  scanner.rs  websocket.rs
src/api/: client.rs  mod.rs  types.rs
